# shifo

./: .codespellrc  BUILDING.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.c  lib.c~
test/: CMakeLists.txt
test/source/: shifo_test.cpp
